--- a/project/css/body.css
+++ b/project/css/body.css
@@ -136,7 +136,7 @@ nav a {
 
 /* Back-to-top button */
 .back-to-top {
-    display: none;
+    display: block;
     position: fixed;
     bottom: 20px;
     right: 20px;
